--- a/chado-pathogens.properties
+++ b/chado-pathogens.properties
@@ -1,10 +1,14 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
+
+resource.type=chado-postgres
+queries.class=org.genedb.crawl.business.postgres.PostgresQuerySource
+
 dbhost=localhost
 dbport=5437
 dbname=pathogens
 dbuser=pathdb
 dbpassword=pathdb
 sqlPath=/sql
+
 fileStorePath=/Volumes/us/db/heirarchy
-luceneDirectory=/Users/gv1/Documents/Data/lucene
-tabixDirectory=/Users/gv1/Documents/Data/out
+
