--- a/pathogens-gv1.properties
+++ b/pathogens-gv1.properties
@@ -1,14 +1,14 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
+deploy.name=crawl-chado
 
 resource.type=chado-postgres
 queries.class=org.genedb.crawl.business.postgres.PostgresQuerySource
 
 dbhost=localhost
-dbport=5437
+dbport=5433
 dbname=pathogens
 dbuser=pathdb
 dbpassword=pathdb
 sqlPath=/sql
 
-fileStorePath=/Volumes/us/db/heirarchy
-
+alignments=/Users/gv1/Documents/Code/alignments.json
