Added support for transport connections. Modified configuration to take these into account.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15588 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/resource-chado-pathogens-tunnel.properties
+++ b/resource-chado-pathogens-tunnel.properties
@@ -1,8 +1,10 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
 deploy.name=crawl-chado
 
+alignments=/Users/gv1/Documents/Code/alignments.json
+showParameters=true
+
 resource.type=chado-postgres
-queries.class=org.genedb.crawl.business.postgres.PostgresQuerySource
 
 dbhost=localhost
 dbport=5436
@@ -11,4 +13,3 @@ dbuser=genedb
 dbpassword=genedb
 sqlPath=/sql
 
-alignments=/Users/gv1/Documents/Code/alignments.json
