--- a/resource-chado-pathogens.properties
+++ b/resource-chado-pathogens.properties
@@ -1,8 +1,10 @@
 deploy.dir=/nfs/pathdb/omixed/tomcat/testing/webapps
-deploy.name=crawl
+deploy.name=crawl-pathogens
+
+alignments=/nfs/pathdb/crawl/ini/pathogens.json
+showParameters=true
 
 resource.type=chado-postgres
-queries.class=org.genedb.crawl.business.postgres.PostgresQuerySource
 
 dbhost=pgsrv1
 dbport=5432
@@ -11,6 +13,5 @@ dbuser=genedb
 dbpassword=genedb
 sqlPath=/sql
 
-showParameters=true
 
-alignments=/nfs/pathdb/crawl/ini/pathogens.json
+
