--- a/resource-chado-pathogens.properties
+++ b/resource-chado-pathogens.properties
@@ -1,5 +1,5 @@
 deploy.dir=/nfs/pathdb/omixed/tomcat/testing/webapps
-deploy.name=judo-dynamic
+deploy.name=crawl
 
 alignments=/nfs/pathdb/crawl/ini/pathogens.json
 showParameters=true
