--- a/resource-chado-pathogens.properties
+++ b/resource-chado-pathogens.properties
@@ -1,5 +1,5 @@
-deploy.dir=/nfs/pathdb/omixed/tomcat/testing/webapps
-deploy.name=crawl
+deploy.dir=/nfs/pathdb/genedb/services/webapps
+deploy.name=pathogens-services
 
 alignments=/nfs/pathdb/crawl/ini/pathogens.json
 showParameters=true
