--- a/resource-chado-pathogens-tunnel.properties
+++ b/resource-chado-pathogens-tunnel.properties
@@ -1,7 +1,8 @@
 deploy.dir=/Users/gv1/bin/tomcat/webapps/
 deploy.name=crawl-chado
 
-alignments=/Users/gv1/Documents/Code/alignments.json
+alignments=
+#/Users/gv1/Documents/Code/alignments.json
 showParameters=true
 
 resource.type=chado-postgres
